Contact and location updates for starting at Duke

--- a/resources.html
+++ b/resources.html
@@ -99,24 +99,25 @@
 				<!-- Contact -->
 				<section id="contact">
 					<div class="inner">
-
+				
 						<section class="split">
 							<section>
 								<div class="contact-method">
 									<span class="icon solid alt fa-envelope"></span>
 									<h3>Online</h3>
-									<a href="#">Email: mariajantz@pitt.edu</a><br/>
-									<a href="https://bit.ly/mariajantz">Google Scholar</a><br/>
-									<a href="https://rnel.pitt.edu/people/maria-k-jantz">Lab Website</a>
+									<a href="#">Email: maria.jantz@duke.edu</a><br />
+									<a href="https://bit.ly/mariajantz">Google Scholar</a><br />
+									<a href="https://grill-lab.pratt.duke.edu/people">Lab Website</a>
 								</div>
 							</section>
-						</section><section class="split">
+						</section>
+						<section class="split">
 							<section>
 								<div class="contact-method">
 									<span class="icon solid alt fa-home"></span>
 									<h3>Office Address</h3>
-									<span>Keystone Building, 3520 Fifth Ave, Rm 320<br />
-									Pittsburgh, PA, 15213<br /></span>
+									<span>Fitzpatrick Building, Rm 1163<br />
+										101 Science Dr, Durham, NC 27705<br /></span>
 								</div>
 							</section>
 						</section>
