--- a/science.html
+++ b/science.html
@@ -63,11 +63,13 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									<p>My current PhD work focuses on restoring lower urinary tract function. 
+									<p>My PhD work focused on restoring lower urinary tract function.
 										About 1 in 5 people will experience impaired bladder function, but despite this widespread impact it is often overlooked. 
 										Poor bladder function can come from many neurological conditions, including spinal cord injury, 
 										Parkinson's Disease, and more. Below, I highlight several specific projects I have worked on 
-										in this lab and previously. For a complete set of publications, please see my <a href="https://scholar.google.com/citations?user=0ZZe2g4AAAAJ&hl=en">Google Scholar page</a>
+										in my PhD lab and previously. I recently began a postdoctoral position at Duke University where I
+										study the use of high-frequency nerve stimulation for nerve block; watch this space for future updates on that research. 
+										For a complete set of publications, please see my <a href="https://scholar.google.com/citations?user=0ZZe2g4AAAAJ&hl=en">Google Scholar page</a>
 										 or check out my <a href="cv.html">CV here</a>.
 										I am happy to send a copy of any papers on request.
 									</p>
@@ -172,24 +174,25 @@
 				<!-- Contact -->
 				<section id="contact">
 					<div class="inner">
-
+				
 						<section class="split">
 							<section>
 								<div class="contact-method">
 									<span class="icon solid alt fa-envelope"></span>
 									<h3>Online</h3>
-									<a href="#">Email: mariajantz@pitt.edu</a><br/>
-									<a href="https://bit.ly/mariajantz">Google Scholar</a><br/>
-									<a href="https://rnel.pitt.edu/people/maria-k-jantz">Lab Website</a>
+									<a href="#">Email: maria.jantz@duke.edu</a><br />
+									<a href="https://bit.ly/mariajantz">Google Scholar</a><br />
+									<a href="https://grill-lab.pratt.duke.edu/people">Lab Website</a>
 								</div>
 							</section>
-						</section><section class="split">
+						</section>
+						<section class="split">
 							<section>
 								<div class="contact-method">
 									<span class="icon solid alt fa-home"></span>
 									<h3>Office Address</h3>
-									<span>Keystone Building, 3520 Fifth Ave, Rm 320<br />
-									Pittsburgh, PA, 15213<br /></span>
+									<span>Fitzpatrick Building, Rm 1163<br />
+										101 Science Dr, Durham, NC 27705<br /></span>
 								</div>
 							</section>
 						</section>
