--- a/background.html
+++ b/background.html
@@ -51,13 +51,17 @@
 									<header class="major">
 										<h1>Background</h1>
 									</header>
-									<p>I am currently a PhD candidate at the University of Pittsburgh, where I work with Professor Robert Gaunt. 
-										Here, I study epidural spinal cord stimulation for lower urinary tract control. I conduct anesthetized and behaving
+									<p>I am a Postdoctoral Associate at Duke University with Professor Warren Grill. At Duke, I use computational and experimental methods
+										to investigate the use of high-frequency stimulation for nerve block. 
+									</p>
+
+									<p>I completed my PhD at the University of Pittsburgh, where I worked with Professor Robert Gaunt. 
+										There, I studied epidural spinal cord stimulation for lower urinary tract control. I conducted anesthetized and behaving
 										experiments to determine the relationship of neural recruitment to stimulation-evoked bladder function. I also 
-										build computational models to investigate that neural recruitment at the spinal cord.
+										built computational models to investigate that neural recruitment at the spinal cord.
 										I received an NDSEG Fellowship to carry out this work. 
 									</p>
-									<p>Prior to joining this lab, I worked as a Research Technician at Northwestern University with Professors Lee Miller and Matthew Tresch.
+									<p>Prior to graduate school, I worked as a Research Technician at Northwestern University with Professors Lee Miller and Matthew Tresch.
 										I studied functional electrical stimulation to restore locomotion after spinal cord injury, and as a part of that work I used motion tracking, 
 										recorded brain signals from the motor cortex of rats, and recorded and stimulated muscle activity. 
 									</p>
@@ -66,10 +70,11 @@
 									<p>Outside of lab, I enjoy making ceramics, glassblowing, rock climbing, and dance.</p>
 
 									<h3>Research Interests</h3>
-									<p>Broadly, I am interested in neural stimulation and rehabilitation of sensorimotor systems. 
-										I am particularly interested in the neural processes underlying changes in motor outcomes resulting from conscious mechanisms such as 
+									<p>Broadly, I am interested in neural stimulation and rehabilitation of sensorimotor systems. My highest research priority is to 
+										develop new tools with electrophysiology for clinical use. 
+										I am additionally interested in the neural processes underlying changes in motor outcomes resulting from conscious mechanisms such as 
 										attention, volitional control, and learning. I think it's critical as researchers to listen to people's lived experiences
-									    in order to motivate the areas we choose to focus our research. </p>
+									    in order to motivate areas of research focus. </p>
 									
 								</div>
 							</section>
@@ -85,9 +90,9 @@
 								<div class="contact-method">
 									<span class="icon solid alt fa-envelope"></span>
 									<h3>Online</h3>
-									<a href="#">Email: mariajantz@pitt.edu</a><br/>
+									<a href="#">Email: maria.jantz@duke.edu</a><br/>
 									<a href="https://bit.ly/mariajantz">Google Scholar</a><br/>
-									<a href="https://rnel.pitt.edu/people/maria-k-jantz">Lab Website</a>
+									<a href="https://grill-lab.pratt.duke.edu/people">Lab Website</a>
 								</div>
 							</section>
 						</section><section class="split">
@@ -95,8 +100,8 @@
 								<div class="contact-method">
 									<span class="icon solid alt fa-home"></span>
 									<h3>Office Address</h3>
-									<span>Keystone Building, 3520 Fifth Ave, Rm 320<br />
-									Pittsburgh, PA, 15213<br /></span>
+									<span>Fitzpatrick Building, Rm 1163<br />
+									101 Science Dr, Durham, NC 27705<br /></span>
 								</div>
 							</section>
 						</section>
