--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 								<h1>Maria Jantz</h1>
 							</header>
 							<div class="content">
-								<p>PhD student at the University of Pittsburgh studying<br />
-								neurostimulation of the lower urinary tract.</p>
+								<p>Postdoc at Duke University studying<br />
+								high-frequency nerve block.</p>
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">About</a></li>
 								</ul>
